--- a/0x02-tailwind-css/package.json
+++ b/0x02-tailwind-css/package.json
@@ -3,13 +3,18 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tailwindcss -i ./src/input.css -o ./src/output.css --watch"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "tailwindcss"
+  ],
+  "author": "Yeabsira Bezabih",
   "license": "ISC",
-  "description": "",
+  "description": "This is a project to learn about tailwind css",
   "devDependencies": {
-    "tailwindcss": "^4.1.13"
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
